# SokolPong

./: CMakeLists.txt  README.md  build.bat  build_shaders.bat
shaders/: quad.glsl  quad_uv.glsl
src/: game_state.hpp  input.cpp  input.hpp  logging.h  main.cpp  math_types.hpp  renderer.cpp  renderer.hpp  sdl_glue.c  sdl_glue.h
